--- a/pose.ipynb
+++ b/pose.ipynb
@@ -9,83 +9,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import cv2\n",
-    "import mediapipe as mp\n",
-    "import numpy as np\n",
-    "import json\n",
-    "\n",
-    "# Initialize MediaPipe BlazePose\n",
-    "mp_pose = mp.solutions.pose\n",
-    "pose = mp_pose.Pose(min_detection_confidence=0.5, min_tracking_confidence=0.5)\n",
-    "\n",
-    "# Capture video from webcam\n",
-    "cap = cv2.VideoCapture(0)\n",
-    "\n",
-    "# Store keypoints over time\n",
-    "keypoints_list = []\n",
-    "\n",
-    "while cap.isOpened():\n",
-    "    ret, frame = cap.read()\n",
-    "    if not ret:\n",
-    "        print(\"Failed to grab frame\")\n",
-    "        break\n",
-    "\n",
-    "    # Convert frame to RGB for MediaPipe\n",
-    "    image_rgb = cv2.cvtColor(frame, cv2.COLOR_BGR2RGB)\n",
-    "    image_rgb.flags.writeable = False\n",
-    "\n",
-    "    # Run BlazePose\n",
-    "    results = pose.process(image_rgb)\n",
-    "\n",
-    "    # Convert back to BGR for OpenCV\n",
-    "    image_rgb.flags.writeable = True\n",
-    "    image_bgr = cv2.cvtColor(image_rgb, cv2.COLOR_RGB2BGR)\n",
-    "\n",
-    "    # If landmarks are detected\n",
-    "    if results.pose_landmarks:\n",
-    "        landmarks = results.pose_landmarks.landmark\n",
-    "        \n",
-    "        # Extract and store the keypoints (x, y, z) and visibility for each joint\n",
-    "        keypoints = []\n",
-    "        for landmark in landmarks:\n",
-    "            keypoints.append((landmark.x, landmark.y, landmark.z, landmark.visibility))\n",
-    "        \n",
-    "        keypoints_list.append(keypoints)\n",
-    "\n",
-    "        # Draw the pose landmarks on the frame (for visualization)\n",
-    "        mp.solutions.drawing_utils.draw_landmarks(\n",
-    "            image_bgr, \n",
-    "            results.pose_landmarks, \n",
-    "            mp_pose.POSE_CONNECTIONS\n",
-    "        )\n",
-    "\n",
-    "    # Show the frame\n",
-    "    cv2.imshow('Skeleton Capture', image_bgr)\n",
-    "\n",
-    "    # Press q to exit\n",
-    "    if cv2.waitKey(1) & 0xFF == ord('q'):\n",
-    "        break\n",
-    "    \n",
-    "# Save keypoints_list to a JSON file\n",
-    "with open('skeleton_data.json', 'w') as f:\n",
-    "    json.dump(keypoints_list, f)\n",
-    "\n",
-    "cap.release()\n",
-    "cv2.destroyAllWindows()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "\n",
     "from pose import img_keypoints_json\n",
     "from pose import video_keypoints_json\n",
     "from pose import img_keypoints_csv\n",
@@ -94,23 +22,15 @@
     "from pose import play_json\n",
     "from pose import display_images\n",
     "from pose import display_keypoints_imgs\n",
-    "from pose import cam2csv\n"
+    "from pose import cam2csv\n",
+    "from pose import cam2json"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\dougl\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.9_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python39\\site-packages\\google\\protobuf\\symbol_database.py:55: UserWarning: SymbolDatabase.GetPrototype() is deprecated. Please use message_factory.GetMessageClass() instead. SymbolDatabase.GetPrototype() will be removed soon.\n",
-      "  warnings.warn('SymbolDatabase.GetPrototype() is deprecated. Please '\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "cam2csv('you', 'you.csv')"
    ]
@@ -164,12 +84,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img = ['doug.jpg']"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "#press any key to continue\n",
-    "display_images(image_paths)"
+    "display_images(img)"
    ]
   },
   {
@@ -188,17 +117,112 @@
     "\"\"\"\n",
     "takes a list of pictures, a label, and a filename for the output CSV file as input\n",
     "\"\"\"\n",
-    "img_keypoints_csv(image_paths, 'pushups', 'pushups.csv')\n",
-    "img_keypoints_json(image_paths, 'pushups', 'pushups.json')"
+    "img_keypoints_csv(img, 'doug', 'doug.csv')\n",
+    "img_keypoints_json(img, 'pushups', 'doug.json')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>label</th>\n",
+       "      <th>x_0</th>\n",
+       "      <th>y_0</th>\n",
+       "      <th>z_0</th>\n",
+       "      <th>visibility_0</th>\n",
+       "      <th>x_1</th>\n",
+       "      <th>y_1</th>\n",
+       "      <th>z_1</th>\n",
+       "      <th>visibility_1</th>\n",
+       "      <th>x_2</th>\n",
+       "      <th>...</th>\n",
+       "      <th>z_30</th>\n",
+       "      <th>visibility_30</th>\n",
+       "      <th>x_31</th>\n",
+       "      <th>y_31</th>\n",
+       "      <th>z_31</th>\n",
+       "      <th>visibility_31</th>\n",
+       "      <th>x_32</th>\n",
+       "      <th>y_32</th>\n",
+       "      <th>z_32</th>\n",
+       "      <th>visibility_32</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>doug</td>\n",
+       "      <td>0.516238</td>\n",
+       "      <td>0.289408</td>\n",
+       "      <td>-0.311132</td>\n",
+       "      <td>0.999975</td>\n",
+       "      <td>0.523862</td>\n",
+       "      <td>0.278599</td>\n",
+       "      <td>-0.283088</td>\n",
+       "      <td>0.999908</td>\n",
+       "      <td>0.529568</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.43088</td>\n",
+       "      <td>0.884</td>\n",
+       "      <td>0.542015</td>\n",
+       "      <td>0.789269</td>\n",
+       "      <td>-0.014898</td>\n",
+       "      <td>0.982699</td>\n",
+       "      <td>0.456543</td>\n",
+       "      <td>0.765679</td>\n",
+       "      <td>0.269362</td>\n",
+       "      <td>0.975242</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1 rows × 133 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  label       x_0       y_0       z_0  visibility_0       x_1       y_1  \\\n",
+       "0  doug  0.516238  0.289408 -0.311132      0.999975  0.523862  0.278599   \n",
+       "\n",
+       "        z_1  visibility_1       x_2  ...     z_30  visibility_30      x_31  \\\n",
+       "0 -0.283088      0.999908  0.529568  ...  0.43088          0.884  0.542015   \n",
+       "\n",
+       "       y_31      z_31  visibility_31      x_32      y_32      z_32  \\\n",
+       "0  0.789269 -0.014898       0.982699  0.456543  0.765679  0.269362   \n",
+       "\n",
+       "   visibility_32  \n",
+       "0       0.975242  \n",
+       "\n",
+       "[1 rows x 133 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df = pd.read_csv('pushups.csv')\n",
+    "df = pd.read_csv('doug.csv')\n",
     "df"
    ]
   },
@@ -211,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,12 +264,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing video: data/vids/s03/60457274/standing_ab_twists.mp4\n",
+      "Keypoints from 1 videos labeled with 's03_standing_ab_twists' saved to s03_standing_ab_twists_fl.csv.\n"
+     ]
+    }
+   ],
    "source": [
-    "vid = ['data/dance/video/dance.mp4']\n",
-    "video_keypoints_csv(vid, 'dance', 'dance.csv')\n"
+    "vid = ['data/vids/s03/58860488/standing_ab_twists.mp4']\n",
+    "video_keypoints_csv(vid, 's03_standing_ab_twists', 's03_standing_ab_twists_br.csv')\n"
    ]
   },
   {
@@ -254,7 +287,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('dance.csv')\n",
+    "df = pd.read_csv('skating.csv')\n",
     "df"
    ]
   },
@@ -274,11 +307,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "play_csv('dance.csv')"
+    "play_csv('skating.csv')"
    ]
   },
   {
@@ -314,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
